# surfel-reconstruction

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/bounds/: mod.rs  sphere3d.rs
src/image/: luma.rs  mod.rs  rgb.rs
src/surfel/: fusion.rs  indexmap.rs  surfel_model.rs  surfel_type.rs
src/unit_test/: datasets.rs  mod.rs  point_clouds.rs  range_images.rs
src/utils/: access.rs  mod.rs
src/viz/: mod.rs  normal_matrix.rs  surfel_node.rs
tests/: test_surfel_fusion.rs  test_surfel_render.rs
