[package]
name = "surfel-reconst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
align3d = { file = "deps/align3d" , features = ["viz"]}
akaze = { file = "deps/cv/akaze" }
vulkano = "*"
clap = { version = "4.0.18", features = ["cargo", "derive"] }
image = "*"


[lib]
name = "surfelrec"
path = "src/lib.rs"
