[package]
name = "surfel-reconst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
align3d = { path = "deps/align3d" , features = ["viz"] }
akaze = { path = "deps/cv/akaze" }
vulkano = "*"
vulkano-shaders = "*"
clap = { version = "4.0.18", features = ["cargo", "derive"] }
image = "*"
nalgebra = "*"
nalgebra-glm = "*"
parking_lot = "*"
num = "*"
ndarray = "*"
rayon = "*"
bitarray = "0.9.0"
thiserror = "1.0.49"
itertools = "0.11.0"
ordered-float = "*"
nshare = "*"

[lib]
name = "surfelrec"
path = "src/lib.rs"

[dev-dependencies]
rstest = "0.15.0"
test-temp-file = "0.1.2"
tempfile = "3.3.0"
criterion = "0.4"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["flamegraph", "criterion", "protobuf"] }


[[test]]
name = "test_surfel_fusion"
path = "tests/test_surfel_fusion.rs"
harness = false

[[test]]
name = "test_surfel_render"
path = "tests/test_surfel_render.rs"
harness = false
